# riffgrep

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/commands/: sprint-review.md  watch-pr.md
.claude/skills/: pull-reviews.md  reply-reviews.md  sprint-review.md
.github/instructions/: docs-review.instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml
benches/: metadata_read.rs  sqlite_ops.rs  tui_render.rs
doc/: DESIGN.md  MARKER_SERIALIZATION.md  PICKER_SCHEMA.md  TODO.md
doc/designs/: debt-fsm.md  debt-playback.md  embedding-agentic.md  embedding-human.md
doc/misc/: SOUNDMINER_SCHEMA_ANALYSIS.md
doc/plans/: plan-2026-03-26.md  plan-2026-03-27.md  plan-2026-04-15.md  plan-2026-04-17-01.md  plan-2026-04-18-01.md  plan-2026-04-18-02.md  plan-2026-04-18-03.md  plan-2026-04-18-04.md  plan-2026-04-19-01.md  plan-2026-04-19-02.md  plan-2026-04-19-03.md  plan-2026-04-19-04.md  plan-2026-04-19-05.md  plan-2026-04-19-06.md  plan-2026-04-22-01.md  plan-2026-04-22-02.md  plan-2026-04-22-03.md  todo.md
doc/reviews/: review-0000.md  review-00003.md  review-00007.md  review-0001.md  review-00010.md  review-00017.md  review-0002.md  review-00020.md  review-00023.md  review-00024.md  review-00025.md  review-00026.md  review-00027.md  review-00028.md  review-00029.md  review-0003.md  review-00030.md  review-0004.md  review-0005.md  review-0006.md  review-0007.md  review-0010.md  review-0011.md  review-0012.md  review-0013.md  review-0014.md  review-0016.md  review-0018.md  review-0020.md  review-0021.md  review-0022.md  review-2026-04-15-01.md  review-2026-04-15-02.md
doc/todo/: WORKFLOWS.md
proptest-regressions/engine/: id3.txt
scripts/: _gh.py  autosquash.sh  category_tagger.lua  embed_encode.py  embed_preprocess.py  embed_train.py  enrich_from_ref.sql  etl_soundminer.lua  etl_soundminer_ref.lua  extract_pr_body.sh  inject_synthetic_embeddings.py  pull_reviews.py  reply_review.py  safe_merge.sh
scripts/tests/: conftest.py  test_codebook_rust_compat.py  test_embedding_norm.py  test_encode_idempotent.py  test_encode_skip_logging.py  test_loop_skipped.py  test_preprocess_properties.py  test_ranking_sanity.py  test_train_memory.py
src/: lib.rs  main.rs  util.rs
src/engine/: api.rs  bext.rs  cli.rs  config.rs  filesystem.rs  id3.rs  marker_fsm.rs  marks.rs  mod.rs  playback.rs  playback_fsm.rs  pq.rs  riff_info.rs  search_fsm.rs  search_runner.rs  similarity.rs  source.rs  sqlite.rs  wav.rs  workflow.rs
src/ui/: actions.rs  mod.rs  search.rs  theme.rs  widgets.rs
tests/: edge_cases.rs  integration.rs
tests/engine/: main.rs  workflow.rs
tests/engine/marker_fsm/: generators.rs  prop.rs  test.rs  unit.rs
tests/engine/playback_fsm/: generators.rs  prop.rs  test.rs  unit.rs
tests/engine/search_fsm/: generators.rs  prop.rs  test.rs  unit.rs
tests/proptest-regressions/: prop.txt
tests/proptest-regressions/marker_fsm/: prop.txt  test.txt
tests/proptest-regressions/playback_fsm/: test.txt
tests/ui/: main.rs
