[package]
name = "riffgrep"
version = "0.1.0"
edition = "2024"
description = "High-performance WAV sample library metadata search"
license = "MIT"

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4"
mimalloc = "0.1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3"
proptest = "1"

[[bench]]
name = "metadata_read"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
