[package]
name = "riffgrep"
version = "0.1.0"
edition = "2024"
description = "High-performance WAV sample library metadata search"
license = "MIT"

[dependencies]
anyhow = "1"
bpaf = { version = "0.9", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ignore = "0.4"
lofty = "0.22"
mimalloc = "0.1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
uuid = { version = "1", features = ["v7"] }
ratatui = { version = "0.29", features = ["crossterm"] }
rayon = "1"
regex = "1"
rusqlite = { version = "0.33", features = ["bundled", "modern_sqlite", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
rodio = "0.19"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "aiff", "mp3", "flac", "ogg"] }
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
predicates = "3"
proptest = "1"

[[test]]
name = "engine"
path = "tests/engine/main.rs"

[[test]]
name = "ui"
path = "tests/ui/main.rs"

[[test]]
name = "workflow"
path = "tests/engine/workflow.rs"

[[bench]]
name = "metadata_read"
harness = false

[[bench]]
name = "sqlite_ops"
harness = false

[[bench]]
name = "tui_render"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
