[project]
name = "riffgrep-scripts"
version = "0.1.0"
description = "Python helpers for riffgrep: CLAP embedding encoding and FAISS PQ codebook training."
requires-python = ">=3.10"
dependencies = [
    "laion-clap>=1.1.6",
    "faiss-cpu>=1.8.0",
    "librosa>=0.10.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
markers = [
    "requires_clap_model: test needs a real LAION-CLAP checkpoint; skipped via the conftest hook unless LAION_CLAP_CHECKPOINT is set. Individual tests may gate on additional env vars (e.g., RIFFGREP_RANKING_FIXTURE_DIR) at runtime.",
]

[tool.uv]
package = false
