[project]
name = "riffgrep-scripts"
version = "0.1.0"
description = "Python helpers for riffgrep: CLAP embedding encoding and FAISS PQ codebook training."
requires-python = ">=3.10,<3.14"

# Core: the minimum needed to *import* any script in `scripts/` — not
# enough to run the test suite on its own. Running tests wants the
# `dev` extra (pytest + hypothesis), and real CLAP inference wants
# the `ml` umbrella below. Keeping core this thin means a plain
# `uv sync` on a fresh clone doesn't touch the ML long tail.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
]
# Real CLAP encoding pipeline for `scripts/embed_encode.py`.
# Heavy: pulls torch + numba + llvmlite. llvmlite lacks prebuilt wheels
# for some platform/Python combos (notably recent Python on macOS x86_64)
# and falls back to a source build that needs `cmake` + LLVM. Install
# only when actually running embed_encode.py.
encode = [
    "laion-clap>=1.1.6",
    # laion-clap declares torchlibrosa but not torch itself — ML-package
    # convention is to let the user pick CPU/CUDA/MPS. For this repo's
    # personal-use case plain CPU torch is fine, so pull it explicitly.
    # Upper bound: torch 2.7+ dropped macOS x86_64 wheels; 2.3-2.6 ships
    # them. Revisit with the numba/llvmlite pin when upstream catches up.
    "torch>=2.0,<2.3",
    # laion-clap's clap_module/utils.py imports from torchvision.ops.misc.
    # Keep the same 2.2.x range so the torch/torchvision ABI matches.
    "torchvision>=0.15,<0.18",
    # transformers 5.x requires torch>=2.4 internally, which breaks our
    # torch 2.2.x pin needed for macOS x86_64 wheels. Cap at the 4.x
    # line where laion-clap was developed (its setup says >=4.20.1
    # with no upper bound). Revisit when the torch pin moves.
    "transformers>=4.30,<5",
    "librosa>=0.10.0",
    "soundfile>=0.12",
    "tqdm>=4.66",
]
# Real PQ codebook training for `scripts/embed_train.py`. faiss-cpu
# wheel coverage varies by platform; on macOS x86_64 it occasionally
# requires a build. Install only when running embed_train.py.
train = [
    "faiss-cpu>=1.8.0",
]
# Convenience umbrella for a full inference-capable install:
#   uv sync --extra ml --extra dev
ml = [
    "riffgrep-scripts[encode]",
    "riffgrep-scripts[train]",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
markers = [
    "requires_clap_model: test needs a real LAION-CLAP checkpoint; skipped via the conftest hook unless LAION_CLAP_CHECKPOINT is set. Individual tests may gate on additional env vars (e.g., RIFFGREP_RANKING_FIXTURE_DIR) at runtime.",
]

[tool.uv]
package = false

# Dependency overrides to keep the `ml` / `encode` install wheel-only
# on macOS x86_64 + Python 3.12. laion-clap transitively pulls numba,
# which pulls llvmlite — llvmlite 0.47+ requires LLVM 20 and tries to
# build from source when no x86_64 wheel is available. Capping numba
# at <0.62 pulls llvmlite 0.44, which ships wheels for the same targets.
#
# WARNING: these caps are resolver-global. If a future dep declares
# numba>=0.62 the resolver fails with a confusing conflict error —
# not a missing wheel — and the fix is to remove/bump these pins,
# not to fight the conflict. Revisit when laion-clap upstream moves
# to a numba version that ships x86_64 wheels (or when we drop
# x86_64 support entirely).
override-dependencies = [
    "numba<0.62",
    "llvmlite<0.45",
]
